--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: xavamess
 Type: Package
-Title: Various useful functions
+Title: Useful Miscellaneous Functions
 Version: 0.1
 Date: 2015-02-05
 Author: Xavier Robin
 Maintainer: Xavier Robin <xavier.robin@bric.ku.dk>
-Description: This package contains one useful function
+Description: Useful miscellaneous functions developed by Xavier Robin over the years
 License: GPL-3
 Imports: stringr
