--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ export("%+%")
 export(elongate)
 export(guessCores)
 export(loadToList)
+export(rank.normalize)
 export(sparse.extract.index)
+import(stats)
 importFrom(parallel,detectCores)
 importFrom(stringr,str_split)
