--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,11 @@ export("%+%")
 export(elongate)
 export(guessCores)
 export(loadToList)
+export(log.transform)
+export(power.transform)
 export(rank.normalize)
 export(sparse.extract.index)
+export(sqrt.transform)
 import(stats)
 importFrom(parallel,detectCores)
 importFrom(stringr,str_split)
