--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,4 +15,6 @@ export(sqrt.transform)
 import(stats)
 importFrom(parallel,detectCores)
 importFrom(parallel,parLapply)
+importFrom(stringr,str_detect)
+importFrom(stringr,str_match)
 importFrom(stringr,str_split)
