--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,7 @@ Version: 0.1
 Date: 2015-02-05
 Author: Xavier Robin
 Maintainer: Xavier Robin <xavier.robin@bric.ku.dk>
-Description: Useful miscellaneous functions developed by Xavier Robin over the
-    years
+Description: A compilation of miscellaneous functions developed by Xavier Robin over the years.
 License: GPL-3
 Imports:
     stringr,
