--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,8 +13,13 @@ export(rank.normalize)
 export(sparse.extract.index)
 export(sqrt.transform)
 import(stats)
+importFrom(parallel,clusterExport)
 importFrom(parallel,detectCores)
+importFrom(parallel,makeCluster)
+importFrom(parallel,parApply)
 importFrom(parallel,parLapply)
+importFrom(parallel,parSapply)
+importFrom(parallel,stopCluster)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_match)
 importFrom(stringr,str_split)
