Add loadToEnv function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(autoParLapply)
 export(autoParSapply)
 export(elongate)
 export(guessCores)
+export(loadToEnv)
 export(loadToList)
 export(log.transform)
 export(power.transform)
