mktemp - secure version of tempfile

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(guessCores)
 export(loadToEnv)
 export(loadToList)
 export(log.transform)
+export(mktemp)
 export(power.transform)
 export(rank.normalize)
 export(sparse.extract.index)
