--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(FUN.transform)
 export(autoParApply)
 export(autoParLapply)
 export(autoParSapply)
+export(diffdensity.plot)
 export(elongate)
 export(guessCores)
 export(loadToEnv)
@@ -16,6 +17,10 @@ export(rank.normalize)
 export(sparse.extract.index)
 export(sqrt.transform)
 import(stats)
+importFrom(MASS,kde2d)
+importFrom(grDevices,colorRampPalette)
+importFrom(graphics,contour)
+importFrom(graphics,image)
 importFrom(parallel,clusterExport)
 importFrom(parallel,detectCores)
 importFrom(parallel,makeCluster)
