--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(sqrt.transform)
 import(stats)
 importFrom(MASS,kde2d)
 importFrom(grDevices,colorRampPalette)
+importFrom(grDevices,extendrange)
 importFrom(graphics,contour)
 importFrom(graphics,image)
 importFrom(parallel,clusterExport)
