--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: xavamess
 Type: Package
 Title: Useful Miscellaneous Functions
-Version: 0.2
+Version: 0.2.9
 Date: 2015-02-05
 Author: Xavier Robin
-Maintainer: Xavier Robin <xavier.robin@bric.ku.dk>
+Maintainer: Xavier Robin <robin@lindinglab.org>
 Description: A compilation of miscellaneous functions developed by Xavier Robin over the years.
 License: GPL-3
 Imports:
