add lettersToDecimal function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(autoParSapply)
 export(diffdensity.plot)
 export(elongate)
 export(guessCores)
+export(lettersToDecimal)
 export(loadToEnv)
 export(loadToList)
 export(log_transform)
