--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(log_transform)
 export(mktemp)
 export(power_transform)
 export(rank.normalize)
+export(setdiff_symmetric)
 export(sparse.extract.index)
 export(sqrt_transform)
 import(stats)
@@ -23,6 +24,7 @@ importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,extendrange)
 importFrom(graphics,contour)
 importFrom(graphics,image)
+importFrom(methods,is)
 importFrom(parallel,clusterExport)
 importFrom(parallel,detectCores)
 importFrom(parallel,makeCluster)
