--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(FUN_transform)
 export(autoParApply)
 export(autoParLapply)
 export(autoParSapply)
+export(calcModifiedPeptideP)
 export(diffdensity.plot)
 export(elongate)
 export(guessCores)
@@ -20,6 +21,7 @@ export(sparse.extract.index)
 export(sqrt_transform)
 import(stats)
 importFrom(MASS,kde2d)
+importFrom(Rcpp,evalCpp)
 importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,extendrange)
 importFrom(graphics,contour)
@@ -35,3 +37,4 @@ importFrom(parallel,stopCluster)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_match)
 importFrom(stringr,str_split)
+useDynLib(xavamess)
