constructModifiedPeptide from Modified Sequence

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(autoParApply)
 export(autoParLapply)
 export(autoParSapply)
 export(calcModifiedPeptideP)
+export(constructModifiedPeptide)
 export(diffdensity.plot)
 export(elongate)
 export(guessCores)
