Implement na.warn to remove NAs with a warning

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(loadToEnv)
 export(loadToList)
 export(log_transform)
 export(mktemp)
+export(na.warn)
 export(power_transform)
 export(rank.normalize)
 export(setdiff_symmetric)
