--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,11 +17,13 @@ export(mktemp)
 export(na.warn)
 export(power_transform)
 export(rank.normalize)
+export(safe.mapping)
 export(setdiff_symmetric)
 export(sparse.extract.index)
 export(sqrt_transform)
 import(stats)
 importFrom(MASS,kde2d)
+importFrom(dplyr,left_join)
 importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,extendrange)
 importFrom(graphics,contour)
