Add getMart function to simplify the use of biomaRt with Ensembl

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(autoParLapply)
 export(autoParSapply)
 export(diffdensity.plot)
 export(elongate)
+export(getMart)
 export(guessCores)
 export(lettersToDecimal)
 export(loadToEnv)
