Add seq_range function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(na.warn)
 export(power_transform)
 export(rank.normalize)
 export(safe.mapping)
+export(seq_range)
 export(setdiff_symmetric)
 export(sparse.extract.index)
 export(sqrt_transform)
